{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 12,
  "lineage": "320e0080-0281-962f-19b5-b57cc6d7f5f8",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863647765358:vpc/vpc-004f1e0ffc2ff5faa",
            "cidr_block": "10.104.0.0/18",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-08671afcfabbdaed9",
                "cidr_block": "10.104.0.0/18",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-2d79e746",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-004f1e0ffc2ff5faa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-061eea6d504036b9c",
            "owner_id": "863647765358",
            "tags": {
              "Environment": "ue2",
              "Name": "kin-ue2-sandboxplatform-common",
              "Namespace": "kin",
              "Stage": "sandboxplatform",
              "automation": "terraform",
              "kin:service": "shared",
              "kin:team": "devops",
              "kubernetes.io/cluster/kin-ue2-sandboxplatform-eks-cluster": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863647765358:security-group/sg-0157e2dab6380eae5",
            "description": "Security group for Kafka bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0157e2dab6380eae5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access to bastion host",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-club-msk-serverless-bastion-sg20250715152527993900000001",
            "name_prefix": "dev-club-msk-serverless-bastion-sg",
            "owner_id": "863647765358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-club-msk-serverless-bastion-security-group"
            },
            "tags_all": {
              "Name": "dev-club-msk-serverless-bastion-security-group",
              "kin:domain": "epp",
              "kin:environment": "dev",
              "kin:service": "epp-dev-club",
              "owner": "llan",
              "removeAsOf": "07/21/2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f1e0ffc2ff5faa"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:863647765358:security-group/sg-0f9a5bc5a888238a0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9a5bc5a888238a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.104.0.0/18"
                ],
                "description": "Kafka IAM access from VPC (including bastion)",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [
                  "10.104.0.0/18"
                ],
                "description": "Kafka TLS access from VPC",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9094
              },
              {
                "cidr_blocks": [],
                "description": "Kafka IAM access from bastion host",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0157e2dab6380eae5"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "Kafka TLS access from bastion host",
                "from_port": 9094,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0157e2dab6380eae5"
                ],
                "self": false,
                "to_port": 9094
              }
            ],
            "name": "dev-club-msk-serverless-sg20250715152530906500000002",
            "name_prefix": "dev-club-msk-serverless-sg",
            "owner_id": "863647765358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-club-msk-serverless-security-group"
            },
            "tags_all": {
              "Name": "dev-club-msk-serverless-security-group",
              "kin:domain": "epp",
              "kin:environment": "dev",
              "kin:service": "epp-dev-club",
              "owner": "llan",
              "removeAsOf": "07/21/2025"
            },
            "timeouts": null,
            "vpc_id": "vpc-004f1e0ffc2ff5faa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_security_group",
            "data.aws_vpc.selected"
          ]
        }
      ]
    }
  ]
}